# fault-tolerant-ros-master

./: .gitignore  README.md  kinetic-ros_comm-wet.rosinstall  kinetic-ros_comm-wet.rosinstall.old  ros_env_setup.sh
src/: .rosinstall
src/ros/mk/: .tar
src/ros/ros/: .tar
src/ros/rosbash/: .tar
src/ros/rosboost_cfg/: .tar
src/ros/roscreate/: .tar
src/ros_comm/roslaunch/resources/: roscore.xml
src/ros_comm/roslaunch/scripts/: roscore
src/ros_comm/roslaunch/src/roslaunch/: __init__.py  launch.py  nodeprocess.py  parent.py
src/ros_comm/rosmaster/: CMakeLists.txt
src/ros_comm/rosmaster/scripts/: master_monitor
src/ros_comm/rosmaster/src/rosmaster/: main.py  master.py  master_api.py  master_discoverer.py  paramserver.py  registrations.py  rosrescue.py
src/ros_comm/rospy/src/rospy/: client.py  topics.py
src/ros_comm/rospy/src/rospy/impl/: registration.py
src/ros_comm/rospy/test_nodes/: listener.py  talker.py
